--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
         <h1 class="my-name">Volodymyr Oliinyk</h1>
 
         <p class="about-me-discription">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-          Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          Hello, I'm a beginner developer. At the moment I have not had the opportunity to try myself in commercial
+          projects, but I have experience in applying my knowledge and skills in training projects of the Goit Academy.
+          I love to learn and I'm happy to apply my knowledge to new projects. Here are my strong skills: HTML and CSS.
+          Responsive WEB concept, CSS Flexbox. SASS preprocessor. JavaScript. Now I'm learning React. Experience with
+          npm batch manager, Parcel and Webpack. Experience with the Git version control system. Experience using online
+          services Trello and Figma.
         </p>
       </div>
       <!--my progects section-->
@@ -34,12 +37,20 @@
         <ol class="my-progects-list">
           <li class="my-progects-item">
             <span class="my-progect-text">
-              <a href="https://hellenglish.goit.global/" class="my-progect-link">https://hellenglish.goit.global/</a>
-              ..........
-              <span class="my-progect-bracket">[</span>HTML5, CSS3
-              <span class="my-progect-bracket">]</span>
-            </span>
-          </li>
+              <a href="https://volodymyr-oliynyk.github.io/Filmoteka/" class="my-progect-link">Filmoteka</a>
+              <p class="my-progect-bracket">The final team project of the JavaScript block at the GoIT Academy using
+                JavaScript, html, Handlebars and css. I made a rendering of trending movies when
+                loading the site.</p>
+          </span>
+              </li>
+              <li class="my-progects-item">
+                <span class="my-progect-text">
+                  <a href="https://volodymyr-oliynyk.github.io/Filmoteka/" class="my-progect-link">Filmoteka</a>
+                  <p class="my-progect-bracket">The final team project of the JavaScript block at the GoIT Academy using
+                    JavaScript, html, Handlebars and css. I made search and rendering of movies by keyword. Additional fetch
+                    query about movie genres, release dates and render responses to the movie card. Added favicon.</p>
+              </span>
+                  </li>
           <li class="my-progects-item">
             <span class="my-progect-text">
               <a href="https://cryptohub.goit.global/" class="my-progect-link">https://cryptohub.goit.global/</a>
@@ -120,17 +131,25 @@
       <!--My education section-->
       <div class="My-education-section">
         <h3 class="main-content-title">Education</h3>
-        <h4 class="My-education-university">Odesa State Agrarian University</h4>
-        </h4>
-        <h4 class="My-education-profession">Veterinarian</h4>
-        <p class="My-education-period">
-          September 2008 - June 2016 <span class="My-education-divider"> | </span> Country
-        </p>
+        <div>
+          <h4 class="My-education-university">GoIT Academy</h4>
+          <h4 class="My-education-profession">Full-Stack Development</h4>
+          <p class="My-education-period">
+            October 2021 - until now <span class="My-education-divider"> | </span> Ukraine
+          </p>
+        </div>
+        <div>
+          <h4 class="My-education-university">Odesa State Agrarian University</h4>
+          <h4 class="My-education-profession">Veterinarian</h4>
+          <p class="My-education-period">
+            September 2008 - June 2016 <span class="My-education-divider"> | </span> Ukraine
+          </p>
+        </div>
       </div>
-
     </div>
 
-    <!--sidebar section-->
+
+    <!----------------------------sidebar section--------------------------->
     <aside class="aside-section">
       <img src="img/my-photo.jpg" alt="my-photo" width="370px" />
       <!--contacts section-->
@@ -148,18 +167,24 @@
         <div>
           <a class="contact-section-link" href="https://github.com/Volodymyr-Oliynyk">GitHub</a>
         </div>
+        <div>
+          <a class="contact-section-link" href="">Odesa, Ukraine</a>
+        </div>
       </div>
       <!--Tech Skills section-->
       <div class="Tech-Skills-section">
         <h3 class="sidebar-title">Tech Skills</h3>
         <ul class="Tech-Skills-list">
-          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">HTML5</span></li>
-          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text"> CSS3</span></li>
+          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">HTML5/CSS3/SASS</span></li>
+          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Responsive/Adaptive design</span></li>
           <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">GIT</span></li>
-          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">WebPack</span></li>
           <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">JavaScript</span></li>
-          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text"> React.js</span></li>
+          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">React.js</span></li>
+          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Parcel</span></li>
+          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">WebPack</span></li>
           <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Node.js</span></li>
+          <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Handlebars</span></li>
+
         </ul>
       </div>
       <!--Soft Skills section-->
