--- a/index.html
+++ b/index.html
@@ -50,45 +50,39 @@
                 </p>
               </span>
             </li>
+
             <li class="my-progects-item">
               <span class="my-progect-text">
-                <a href="https://volodymyr-oliynyk.github.io/Filmoteka/" class="my-progect-link"
-                  >Filmoteka</a
+                <a href="https://volodymyr-oliynyk.github.io/icecream/" class="my-progect-link"
+                  >IceCream</a
                 >
                 <p class="my-progect-bracket">
-                  The final team project of the JavaScript block at the GoIT Academy using
-                  JavaScript, html, Handlebars and css. I made search and rendering of movies by
-                  keyword. Additional fetch query about movie genres, release dates and render
-                  responses to the movie card. Added favicon.
+                  The final team project of the layout block at the GoIT Academy using html and css,
+                  as well as connecting js libraries. I made marked up feedback cards and connected
+                  a slider to change them.
                 </p>
               </span>
             </li>
+
             <li class="my-progects-item">
               <span class="my-progect-text">
-                <a href="https://cryptohub.goit.global/" class="my-progect-link"
-                  >https://cryptohub.goit.global/</a
+                <a href="https://volodymyr-oliynyk.github.io/webstudio/" class="my-progect-link"
+                  >WebStudio</a
                 >
-                ...........
-                <span class="my-progect-bracket">[</span> JavaScript
-                <span class="my-progect-bracket">]</span>
+                <p class="my-progect-bracket">
+                  The final individual project of the layout block at the GoIT Academy using html
+                  and css, as well as connecting js libraries.
+                </p>
               </span>
             </li>
-            <li class="my-progects-item">
-              <span class="my-progect-text">
-                <a href="https://kidslike.goit.global/" class="my-progect-link"
-                  >https://kidslike.goit.global/</a
-                >
-                .................
-                <span class="my-progect-bracket">[</span>React.js, Node.js
-                <span class="my-progect-bracket">]</span>
-              </span>
-            </li>
+
+        
           </ol>
         </div>
         <!--my Work Experience-->
         <div class="my-Work-Experience-section">
           <h3 class="main-content-title">Work Experience</h3>
-          
+
           <div class="my-Work-Experience-compani-bloc">
             <h4 class="my-Work-Experience-position">
               Leading Specialist
@@ -97,7 +91,7 @@
               >
             </h4>
             <p class="my-Work-Experience-period">
-              2018 - up to now <span class="my-Work-Experience-divider"> | </span> Country
+              2018 - up to now <span class="my-Work-Experience-divider"> | </span> Ukraine
             </p>
             <ul class="my-Work-Experience-Duties">
               <li class="my-Work-Experience-Duty">
@@ -106,7 +100,9 @@
               <li class="my-Work-Experience-Duty">
                 Preparation of statistical reports in Word, Excel and Cloud formats.
               </li>
-              <li class="my-Work-Experience-Duty">registration of food market operators in the state register.</li>
+              <li class="my-Work-Experience-Duty">
+                registration of food market operators in the state register.
+              </li>
               <li class="my-Work-Experience-Duty">
                 keeping documentation within the scope of authority.
               </li>
@@ -118,20 +114,20 @@
               Sales assistant <span class="my-Work-Experience-company">Pet store "Mr. Dog"</span>
             </h4>
             <p class="my-Work-Experience-period">
-              2016-2018 <span class="my-Work-Experience-divider"> | </span> Country
+              2016-2018 <span class="my-Work-Experience-divider"> | </span> Ukraine
             </p>
             <ul class="my-Work-Experience-Duties">
+              <li class="my-Work-Experience-Duty">Working with program 1C.</li>
               <li class="my-Work-Experience-Duty">
-                Working with program 1C.
+                Consultation and sale of veterinary drugs and pet products.
               </li>
-              <li class="my-Work-Experience-Duty">Consultation and sale of veterinary drugs and pet products.</li>
             </ul>
           </div>
         </div>
         <!--My education section-->
         <div class="My-education-section">
           <h3 class="main-content-title">Education</h3>
-          <ul>
+          <ul class="My-education-list">
             <li>
               <h4 class="My-education-university">GoIT Academy</h4>
               <h4 class="My-education-profession">Full-Stack Development</h4>
@@ -152,7 +148,7 @@
 
       <!----------------------------sidebar section--------------------------->
       <aside class="aside-section">
-        <img src="img/my-photo.jpg" alt="my-photo" width="370px" />
+        <img src="img/my-photo.jpg" alt="my-photo" width="300px" />
         <!--contacts section-->
         <div class="contact-section">
           <h3 class="sidebar-title">Contacts</h3>
@@ -195,17 +191,21 @@
             <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">WebPack</span></li>
             <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Node.js</span></li>
             <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Handlebars</span></li>
+            <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Scrum</span></li>
+
           </ul>
         </div>
         <!--Soft Skills section-->
         <div class="Soft-Skills-section">
           <h3 class="sidebar-title">Soft Skills</h3>
           <ul class="Soft-Skills-list">
-            <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Scrum</span></li>
-            <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Agile</span></li>
-            <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">GTD</span></li>
+            <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Hardworking</span></li>
+            <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Honest</span></li>
             <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Teamwork</span></li>
-          </ul>
+            <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Versatile</span></li>
+            <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Courteous</span></li>
+
+          </ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
         </div>
         <div class="Soft-Skills-section">
           <h3 class="sidebar-title">Languages</h3>
