--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             myself in commercial projects, but I have experience in applying my knowledge and skills
             in training projects of the Goit Academy. I love to learn and I'm happy to apply my
             knowledge to new projects. Here are my strong skills: HTML and CSS. Responsive WEB
-            concept, CSS Flexbox. SASS preprocessor. JavaScript. Now I'm learning React. Experience
+            concept, CSS Flexbox, SASS preprocessor, JavaScript, React. Experience
             with npm batch manager, Parcel and Webpack. Experience with the Git version control
             system. Experience using online services Trello and Figma.
           </p>
@@ -43,6 +43,9 @@
                 <a href="https://volodymyr-oliynyk.github.io/Filmoteka/" class="my-progect-link"
                   >Filmoteka</a
                 >
+                <a href="https://github.com/Volodymyr-Oliynyk/Filmoteka">
+                  <img src="./img/25231.png" alt="GitHub"  width="18" heigth="18">
+                </a>
                 <p class="my-progect-bracket">
                   The final team project of the JavaScript block at the GoIT Academy using
                   JavaScript, html, Handlebars and css. I made a rendering of trending movies when
@@ -56,6 +59,9 @@
                 <a href="https://volodymyr-oliynyk.github.io/icecream/" class="my-progect-link"
                   >IceCream</a
                 >
+                <a href="https://github.com/Volodymyr-Oliynyk/icecream">
+                  <img src="./img/25231.png" alt="GitHub"  width="18" heigth="18">
+                </a>
                 <p class="my-progect-bracket">
                   The final team project of the layout block at the GoIT Academy using html and css,
                   as well as connecting js libraries. I made marked up feedback cards and connected
@@ -69,6 +75,9 @@
                 <a href="https://volodymyr-oliynyk.github.io/webstudio/" class="my-progect-link"
                   >WebStudio</a
                 >
+                <a href="https://github.com/Volodymyr-Oliynyk/WebStudio">
+                  <img src="./img/25231.png" alt="GitHub"  width="18" heigth="18">
+                </a>
                 <p class="my-progect-bracket">
                   The final individual project of the layout block at the GoIT Academy using html
                   and css, as well as connecting js libraries.
@@ -85,11 +94,11 @@
 
           <div class="my-Work-Experience-compani-bloc">
             <h4 class="my-Work-Experience-position">
-              Leading Specialist
-              <span class="my-Work-Experience-company"
-                >Main administration of SSUFSCP in Odesa region</span
-              >
+              Leading Specialist 
             </h4>
+            <p class="my-Work-Experience-company"
+            >Main administration of SSUFSCP in Odesa region</p
+          >
             <p class="my-Work-Experience-period">
               2018 - up to now <span class="my-Work-Experience-divider"> | </span> Ukraine
             </p>
@@ -101,18 +110,19 @@
                 Preparation of statistical reports in Word, Excel and Cloud formats.
               </li>
               <li class="my-Work-Experience-Duty">
-                registration of food market operators in the state register.
+                Registration of food market operators in the state register.
               </li>
               <li class="my-Work-Experience-Duty">
-                keeping documentation within the scope of authority.
+                Keeping documentation within the scope of authority.
               </li>
             </ul>
           </div>
 
           <div class="my-Work-Experience-compani-bloc">
             <h4 class="my-Work-Experience-position">
-              Sales assistant <span class="my-Work-Experience-company">Pet store "Mr. Dog"</span>
+              Sales assistant 
             </h4>
+            <p class="my-Work-Experience-company">Pet store "Mr. Dog"</p>
             <p class="my-Work-Experience-period">
               2016-2018 <span class="my-Work-Experience-divider"> | </span> Ukraine
             </p>
