--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <h1 class="my-name">Volodymyr Oliinyk</h1>
 
           <p class="about-me-discription">
-            Hello, I'm a beginner developer. At the moment I have not had the opportunity to try
+            Hello, I'm a junior developer. At the moment I have not had the opportunity to try
             myself in commercial projects, but I have experience in applying my knowledge and skills
-            in training projects of the Goit Academy. I love to learn and I'm happy to apply my
-            knowledge to new projects. Here are my strong skills: HTML and CSS. Responsive WEB
-            concept, CSS Flexbox, SASS preprocessor, JavaScript, React. Experience
-            with npm batch manager, Parcel and Webpack. Experience with the Git version control
-            system. Experience using online services Trello and Figma.
+            in training projects at the GoIT Academy. I adore learning and I'm happy to apply my
+            knowledge to new projects. Here are my strong skills: HTML and CSS, Responsive WEB
+            concept, CSS Flexbox, SASS preprocessor, JavaScript, React as well as experience with
+            npm batch manager, Parcel, and Webpack. Experience with the Git version control system,
+            using online services: Trello and Figma.
           </p>
         </div>
         <!--my progects section-->
@@ -44,7 +44,7 @@
                   >Filmoteka</a
                 >
                 <a href="https://github.com/Volodymyr-Oliynyk/Filmoteka">
-                  <img src="./img/25231.png" alt="GitHub"  width="18" heigth="18">
+                  <img src="./img/25231.png" alt="GitHub" width="18" heigth="18" />
                 </a>
                 <p class="my-progect-bracket">
                   The final team project of the JavaScript block at the GoIT Academy using
@@ -60,7 +60,7 @@
                   >IceCream</a
                 >
                 <a href="https://github.com/Volodymyr-Oliynyk/icecream">
-                  <img src="./img/25231.png" alt="GitHub"  width="18" heigth="18">
+                  <img src="./img/25231.png" alt="GitHub" width="18" heigth="18" />
                 </a>
                 <p class="my-progect-bracket">
                   The final team project of the layout block at the GoIT Academy using html and css,
@@ -76,7 +76,7 @@
                   >WebStudio</a
                 >
                 <a href="https://github.com/Volodymyr-Oliynyk/WebStudio">
-                  <img src="./img/25231.png" alt="GitHub"  width="18" heigth="18">
+                  <img src="./img/25231.png" alt="GitHub" width="18" heigth="18" />
                 </a>
                 <p class="my-progect-bracket">
                   The final individual project of the layout block at the GoIT Academy using html
@@ -84,8 +84,6 @@
                 </p>
               </span>
             </li>
-
-        
           </ol>
         </div>
         <!--my Work Experience-->
@@ -93,12 +91,8 @@
           <h3 class="main-content-title">Work Experience</h3>
 
           <div class="my-Work-Experience-compani-bloc">
-            <h4 class="my-Work-Experience-position">
-              Leading Specialist 
-            </h4>
-            <p class="my-Work-Experience-company"
-            >Main administration of SSUFSCP in Odesa region</p
-          >
+            <h4 class="my-Work-Experience-position">Leading Specialist</h4>
+            <p class="my-Work-Experience-company">Main administration of SSUFSCP in Odesa region</p>
             <p class="my-Work-Experience-period">
               2018 - up to now <span class="my-Work-Experience-divider"> | </span> Ukraine
             </p>
@@ -119,9 +113,7 @@
           </div>
 
           <div class="my-Work-Experience-compani-bloc">
-            <h4 class="my-Work-Experience-position">
-              Sales assistant 
-            </h4>
+            <h4 class="my-Work-Experience-position">Sales assistant</h4>
             <p class="my-Work-Experience-company">Pet store "Mr. Dog"</p>
             <p class="my-Work-Experience-period">
               2016-2018 <span class="my-Work-Experience-divider"> | </span> Ukraine
@@ -202,7 +194,6 @@
             <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Node.js</span></li>
             <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Handlebars</span></li>
             <li class="Tech-Skills-item"><span class="Tech-Skills-item-text">Scrum</span></li>
-
           </ul>
         </div>
         <!--Soft Skills section-->
@@ -214,8 +205,7 @@
             <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Teamwork</span></li>
             <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Versatile</span></li>
             <li class="Soft-Skills-item"><span class="Soft-Skills-item-text">Courteous</span></li>
-
-          </ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
+          </ul>
         </div>
         <div class="Soft-Skills-section">
           <h3 class="sidebar-title">Languages</h3>
