--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <li class="my-progects-item">
               <span class="my-progect-text">
-                <a href="https://volodymyr-oliynyk.github.io/webstudio/" class="my-progect-link"
+                <a href="https://volodymyr-oliynyk.github.io/WebStudio/" class="my-progect-link"
                   >WebStudio</a
                 >
                 <a href="https://github.com/Volodymyr-Oliynyk/WebStudio">
